--- a/TestProjectMVC/appsettings.json
+++ b/TestProjectMVC/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433; Database=testProjectMVCDb; User=sa; Password=YourPassword123; TrustServerCertificate=True;"
+  }
 }
 
